force-app/main/default/objects/blng__RevenueAdjustmentLine__c/blng__RevenueAdjustmentLine__c.object-meta.xml
<CustomObject>
    <label>Revenue Adjustment Line</label>
    <nameField>
        <label>Revenue Adjustment Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Revenue Adjustment Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>