force-app/main/default/objects/blng__RevenueAdjustmentLine__c/fields/blng__AdjustmentAmount__c.field-meta.xml
<CustomField>
    <fullName>blng__AdjustmentAmount__c</fullName>
    <label>Adjustment Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>