force-app/main/default/objects/blng__RevenueAdjustmentLine__c/fields/blng__FinanceBook__c.field-meta.xml
<CustomField>
    <fullName>blng__FinanceBook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finance Book</label>
    <referenceTo>blng__FinanceBook__c</referenceTo>
    <relationshipLabel>Revenue Adjustment Lines</relationshipLabel>
    <relationshipName>FinanceBookRevenueAdjustmentLines</relationshipName>
    <type>Lookup</type>
</CustomField>