force-app/main/default/objects/blng__RevenueAdjustmentLine__c/fields/blng__FinancePeriod__c.field-meta.xml
<CustomField>
    <fullName>blng__FinancePeriod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finance Period</label>
    <referenceTo>blng__FinancePeriod__c</referenceTo>
    <relationshipLabel>Revenue Adjustment Lines</relationshipLabel>
    <relationshipName>FinancePeriodRevenueAdjustmentLines</relationshipName>
    <type>Lookup</type>
</CustomField>