force-app/main/default/objects/blng__RevenueAdjustmentLine__c/fields/blng__RevenueAdjustment__c.field-meta.xml
<CustomField>
    <fullName>blng__RevenueAdjustment__c</fullName>
    <label>Revenue Adjustment</label>
    <referenceTo>blng__RevenueAdjustment__c</referenceTo>
    <relationshipLabel>Revenue Adjustment Lines</relationshipLabel>
    <relationshipName>RevenueAdjustmentRevenueAdjustmentLines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>