force-app/main/default/objects/blng__RevenueAdjustmentLine__c/fields/blng__TargetRevenueSchedule__c.field-meta.xml
<CustomField>
    <fullName>blng__TargetRevenueSchedule__c</fullName>
    <label>Target Revenue Schedule</label>
    <referenceTo>blng__RevenueSchedule__c</referenceTo>
    <relationshipLabel>Revenue Adjustment Lines</relationshipLabel>
    <relationshipName>RevenueScheduleRevenueAdjustmentLines</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>